--- a/mychart_scraper.ipynb
+++ b/mychart_scraper.ipynb
@@ -6,10 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime\n",
     "from functools import reduce\n",
+    "from math import ceil\n",
+    "from pathlib import Path\n",
+    "from time import sleep\n",
     "\n",
     "import bs4\n",
+    "import numpy as np\n",
+    "import mailersend\n",
     "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
@@ -46,8 +55,8 @@
     "    \"username_id\": \"Login\",\n",
     "    \"password_id\": \"Password\",\n",
     "    \"credentials\": {\n",
-    "        \"username\": \"\",\n",
-    "        \"password\": \"\",\n",
+    "        \"username\": USERNAME,\n",
+    "        \"password\": PASSWORD,\n",
     "    },\n",
     "    \"login_button_id\": \"submit\",\n",
     "    \"login_confirm_css\": \"menuicon heal\",\n",
@@ -55,18 +64,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def verify_logged_in(browser, site):\n",
-    "    try:\n",
-    "        element = WebDriverWait(browser, 10).until(\n",
-    "            EC.presence_of_element_located((By.CSS_SELECTOR, site[\"login_confirm_css\"])))\n",
-    "        return element\n",
-    "    except Exception as e:\n",
-    "        print('login not confirmed Exception: {}'.format(str(e)))"
+    "# scraper"
    ]
   },
   {
@@ -76,28 +77,27 @@
    "outputs": [],
    "source": [
     "def scrape(site):\n",
+    "    browser, lab_entries = get_lab_entries(site)\n",
+    "    if browser is None:\n",
+    "        return None\n",
+    "    parse_lab_pages(browser, lab_entries)\n",
+    "    panel_dict = parse_lab_pages(browser, lab_entries)\n",
+    "    df = agg_df(panel_dict)\n",
+    "    df.to_csv(\"test_output.csv\")\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def get_lab_entries(site: dict):\n",
     "    browser = login(site)\n",
+    "    sleep(3)\n",
+    "    lab_entries = browser.find_elements_by_class_name(\"SingleResult\")\n",
+    "    if not has_updated(lab_entries, \"prev_entry.txt\"):\n",
+    "        browser.close()\n",
+    "        return None, None\n",
     "    load_labs(browser)\n",
     "    lab_entries = browser.find_elements_by_class_name(\"SingleResult\")\n",
     "    print(f\"labs detected: {len(lab_entries)}\")\n",
     "    return browser, lab_entries\n",
-    "    \n",
-    "\n",
-    "def login(site):\n",
-    "    try:\n",
-    "        browser = webdriver.Chrome()\n",
-    "        browser.get(site[\"login_url\"])\n",
-    "        username_box = browser.find_element_by_id(site[\"username_id\"])\n",
-    "        password_box = browser.find_element_by_id(site[\"password_id\"])\n",
-    "        username_box.send_keys(site[\"credentials\"][\"username\"])\n",
-    "        password_box.send_keys(site[\"credentials\"][\"password\"])\n",
-    "        login_button = browser.find_element_by_id(site[\"login_button_id\"])\n",
-    "        login_button.click()\n",
-    "        sleep(3)\n",
-    "    except Exception as e:\n",
-    "        print('failed to login {}'.format(str(e)))\n",
-    "\n",
-    "    return browser\n",
     "\n",
     "\n",
     "def load_labs(browser, pause_time=0.5):\n",
@@ -113,61 +113,94 @@
     "    return True\n",
     "\n",
     "\n",
-    "def get_lab_metadata(browser):\n",
-    "    pass\n",
+    "def parse_lab_pages(browser, lab_entries):\n",
+    "    home_handle = browser.current_window_handle\n",
+    "    panel_dict = dict()\n",
+    "    for entry in lab_entries:\n",
+    "        entry_data = get_entry_data(entry)\n",
+    "        name = entry_data[\"name\"]\n",
+    "        elem = entry_data[\"elem\"]\n",
+    "        if name in panel_dict:\n",
+    "            continue\n",
+    "        lab_url = elem.get_attribute(\"href\")\n",
+    "        browser.execute_script(\"window.open('');\")\n",
+    "        browser.switch_to.window(browser.window_handles[1])\n",
+    "        browser.get(lab_url)\n",
+    "        tabs = browser.find_elements_by_class_name(\"membertab\")\n",
+    "        panel_dict[name] = get_table(browser, tabs, name)\n",
+    "    browser.close()\n",
+    "    browser.switch_to.window(home_handle)\n",
+    "    return panel_dict\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser, lab_entries = scrape(site)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "panel_dict = dict()\n",
-    "home_handle = browser.current_window_handle\n",
-    "for entry in lab_entries:\n",
-    "    panel = entry.find_element_by_class_name(\"ResultName\").find_element_by_tag_name(\"span\")\n",
-    "    entry_clickable = entry.find_element_by_class_name(\"ResultName\").find_element_by_tag_name(\"a\")\n",
-    "    entry_name = entry_clickable.find_element_by_tag_name(\"span\").text\n",
-    "    if entry_name in panel_dict:\n",
-    "        continue\n",
-    "    print(entry_name)\n",
-    "    lab_url = entry_clickable.get_attribute(\"href\")\n",
-    "    window = browser.execute_script(\"window.open('');\")\n",
-    "    browser.switch_to.window(browser.window_handles[1])\n",
-    "    browser.get(lab_url)\n",
-    "    tabs = browser.find_elements_by_class_name(\"membertab\")\n",
+    "\n",
+    "def get_table(browser, tabs, name):\n",
     "    try:\n",
     "        results_tab = list(filter(lambda t: t.find_element_by_tag_name(\"span\").text == \"Past Results\", tabs)).pop()\n",
-    "    except:\n",
-    "        print(f\"{entry_name}: NO TABLE\")\n",
-    "        panel_dict[entry_name] = \"NO TABLE\"\n",
-    "    else:\n",
-    "        results_tab.click()\n",
-    "        start_date = browser.find_element_by_class_name(\"date\")\n",
-    "        start_date.clear()\n",
-    "        start_date.send_keys(\"1/1/15\")\n",
-    "        apply_button = browser.find_element_by_class_name(\"otherbutton\")\n",
-    "        apply_button.click()\n",
-    "        html = browser.page_source\n",
-    "        soup = BeautifulSoup(html,'html.parser')\n",
-    "        table = list(soup.select(\".tableWrapper\")[0].children)[0]\n",
-    "        df = pd.read_html(str(table))[0]\n",
-    "        df.set_index(df.columns[0], inplace=True)\n",
-    "        panel_dict[entry_name] = df.T\n",
-    "    browser.close()\n",
-    "    browser.switch_to.window(home_handle)"
+    "    except Exception as e:\n",
+    "        print(f\"{name}: NO TABLE\")\n",
+    "        return \"NO TABLE\"\n",
+    "    results_tab.click()\n",
+    "    start_date = browser.find_element_by_class_name(\"date\")\n",
+    "    start_date.clear()\n",
+    "    start_date.send_keys(\"1/1/15\")\n",
+    "    apply_button = browser.find_element_by_class_name(\"otherbutton\")\n",
+    "    apply_button.click()\n",
+    "    html = browser.page_source\n",
+    "    soup = bs4.BeautifulSoup(html,'html.parser')\n",
+    "    table = list(soup.select(\".tableWrapper\")[0].children)[0]\n",
+    "    df = pd.read_html(str(table))[0]\n",
+    "    df = df.set_index(df.columns[0]).T\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def agg_df(panel_dict):\n",
+    "    df_list = list(filter(lambda x: isinstance(x, pd.DataFrame), panel_dict.values()))\n",
+    "    df = reduce(\n",
+    "        lambda df_1, df_2: pd.merge(df_1, df_2, how=\"outer\", left_index=True, right_index=True),\n",
+    "        df_list)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def login(site: dict):\n",
+    "    browser = webdriver.Chrome()\n",
+    "    browser.get(site[\"login_url\"])\n",
+    "    username_box = browser.find_element_by_id(site[\"username_id\"])\n",
+    "    password_box = browser.find_element_by_id(site[\"password_id\"])\n",
+    "    username_box.send_keys(site[\"credentials\"][\"username\"])\n",
+    "    password_box.send_keys(site[\"credentials\"][\"password\"])\n",
+    "    login_button = browser.find_element_by_id(site[\"login_button_id\"])\n",
+    "    login_button.click()\n",
+    "    return browser\n",
+    "\n",
+    "\n",
+    "def has_updated(lab_entries: list, prev_entry_path: str):\n",
+    "    path = Path(prev_entry_path)\n",
+    "    if not path.exists():\n",
+    "        return False\n",
+    "    with open(path, \"r\") as f:\n",
+    "        prev_name, prev_date = f.read().splitlines()\n",
+    "    entry_data = get_entry_data(lab_entries[0])\n",
+    "    if entry_data[\"name\"] != prev_name or entry_data[\"date\"] != prev_date:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def get_entry_data(entry):\n",
+    "    entry_dict = dict()\n",
+    "    # panel = entry.find_element_by_class_name(\"ResultName\").find_element_by_tag_name(\"span\")\n",
+    "    entry_dict[\"elem\"] = entry.find_element_by_class_name(\"ResultName\").find_element_by_tag_name(\n",
+    "        \"a\")\n",
+    "    entry_dict[\"name\"] = entry_dict[\"elem\"].find_element_by_tag_name(\"span\").text\n",
+    "    entry_dict[\"date\"] = entry.find_element_by_class_name(\"DateWrapper\").find_element_by_tag_name(\n",
+    "        \"span\").text\n",
+    "    return entry_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# clean and plot"
    ]
   },
   {
@@ -176,7 +209,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_list = list(filter(lambda x: isinstance(x, pd.DataFrame), panel_dict.values()))"
+    "EXTREMA_COLORS = {\"min\": \"orange\", \"max\": \"red\"}\n",
+    "BAD_METRICS = (\"Not\", \"NEG\", \"TRACE\", \"Non\", \"NOT\", \"Negative\", \"Normal\", \"OCC\")\n",
+    "\n",
+    "def clean_plot_df(df, start_date=\"2021-1-1\", min_col_entries=5, n_cols=3):\n",
+    "    df = df.loc[~df.index.str.contains(\"Unnamed\")]\n",
+    "    day_n = df.index.str.split(\".\").map(lambda l: list_val_default(l))\n",
+    "    date = df.index.str.split(\".\").map(lambda x: x[0])\n",
+    "    df.index = pd.to_datetime(date) + day_n.map(lambda t: pd.Timedelta(hours=4 * int(t)))\n",
+    "    dfm = get_metrics_df(df)\n",
+    "    dfn = get_df_numeric(df, start_date, min_col_entries)\n",
+    "    plot_numeric_df(dfn, dfm, n_cols)\n",
+    "\n",
+    "\n",
+    "def plot_numeric_df(dfn, dfm, n_cols):\n",
+    "    # dfl = dfn.reset_index().melt(id_vars=\"index\").dropna()\n",
+    "    rows = ceil(len(dfn.columns) / n_cols)\n",
+    "    titles = dfn.columns.map(\n",
+    "        lambda col: col + \" \" + str(dfm.loc[col][\"units\"]) if col in dfm.index else col)\n",
+    "    titles = titles.str.replace(\"_x\", \"\")\n",
+    "    fig = make_subplots(\n",
+    "        rows=rows, cols=n_cols,\n",
+    "        shared_xaxes=True,\n",
+    "        vertical_spacing=0.01,\n",
+    "        subplot_titles=titles,\n",
+    "    )\n",
+    "    for i, col in enumerate(dfn.columns):\n",
+    "        j = i // n_cols + 1\n",
+    "        i = i % n_cols + 1\n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(x=dfn.index, y=dfn[col], line_shape='linear'),\n",
+    "            row=j,\n",
+    "            col=i\n",
+    "        )\n",
+    "        if col in dfm.index:\n",
+    "            for extrema in [\"min\", \"max\"]:\n",
+    "                lim = dfm[extrema][col]\n",
+    "                if not np.isnan(lim):\n",
+    "                    fig.add_hline(y=lim, line_width=3, line_color=EXTREMA_COLORS[extrema], row=j,\n",
+    "                                  col=i)\n",
+    "    fig.update_layout(\n",
+    "        height=300 * rows,\n",
+    "        width=500 * n_cols,\n",
+    "        title_text=\"Stacked Subplots with Shared X-Axes\"\n",
+    "    )\n",
+    "    fig.update_xaxes(matches='x')\n",
+    "    date = str(datetime.now().date())\n",
+    "    fig.write_html(f\"ehr_{date}.html\")\n",
+    "    fig.show()\n",
+    "\n",
+    "\n",
+    "def get_metrics_df(df):\n",
+    "    metric_names = df.columns.str.split(\"  \").map(lambda l: l[0]).to_series().reset_index(drop=True)\n",
+    "    metric_ranges = df.columns.str.split(\"  \").map(\n",
+    "        lambda l: list_val_default(l, np.nan)).to_series().reset_index(drop=True)\n",
+    "    dfm = pd.concat([metric_names, metric_ranges], axis=1)\n",
+    "    dfm.columns = [\"metric\", \"range\"]\n",
+    "    dfm.set_index(\"metric\", inplace=True)\n",
+    "    dfm = dfm[\"range\"]\n",
+    "    dfm = dfm[~dfm.index.duplicated()]\n",
+    "    dfm = dfm[\n",
+    "        ~dfm.str.contains('|'.join(BAD_METRICS),\n",
+    "                          regex=True).astype(bool)]\n",
+    "    dfm_lists = dfm.dropna().str.split(\" \").dropna()\n",
+    "    dfm = pd.DataFrame(dict(dfm_lists.map(parse_metric_range))).T\n",
+    "    dfm[\"min\"] = dfm[\"min\"].str.replace('|'.join((\",\", \"_x\")), \"\", regex=True).astype(float)\n",
+    "    dfm[\"max\"] = dfm[\"max\"].str.replace('|'.join((\",\", \"_x\")), \"\", regex=True).astype(float)\n",
+    "    df.columns = df.columns.str.split(\"  \").map(lambda l: l[0])\n",
+    "    df.columns = df.columns.str.lower()\n",
+    "    dfm.index = dfm.index.str.lower()\n",
+    "    df.columns = df.columns.str.replace(\" \", \"_\")\n",
+    "    dfm.index = dfm.index.str.replace(\" \", \"_\")\n",
+    "    return dfm\n",
+    "\n",
+    "def parse_metric_range(elem_list):\n",
+    "    metric_dict = dict()\n",
+    "    len_ = len(elem_list)\n",
+    "    if len_ == 1:\n",
+    "        metric_dict[\"units\"] = elem_list[-1]\n",
+    "    elif len_ == 2:\n",
+    "        metric_dict[\"units\"] = elem_list[-1]\n",
+    "        val = elem_list[0]\n",
+    "        for comparator, col in {\"<=\": \"max\", \">=\": \"min\", \"<\": \"max\", \">\": \"min\"}.items():\n",
+    "            if val.startswith(comparator):\n",
+    "                metric_dict[col] = float(val[len(comparator):])\n",
+    "                break\n",
+    "    elif len_ >= 3:\n",
+    "        metric_dict[\"min\"] = elem_list[0]\n",
+    "        metric_dict[\"max\"] = elem_list[2]\n",
+    "        if \"-\" not in elem_list:\n",
+    "            return parse_metric_range([elem_list[0], \" \".join(elem_list[1:])])\n",
+    "        if len_ == 4:\n",
+    "            metric_dict[\"units\"] = elem_list[-1]\n",
+    "    return metric_dict\n",
+    "\n",
+    "\n",
+    "def get_df_numeric(df, start_date, min_col_entries):\n",
+    "    df.to_csv(\"output_cleaned.csv\")\n",
+    "    dfn = df.select_dtypes(np.float64)\n",
+    "    dfn = dfn[dfn.index > start_date]\n",
+    "    dfn = dfn.loc[:,~dfn.columns.duplicated()]\n",
+    "    cols_lt_min = dfn.isnull().sum(axis = 0).sort_values() > len(dfn) - min_col_entries\n",
+    "    dfn = dfn[dfn.columns[~cols_lt_min]]\n",
+    "    dfn = dfn.interpolate(limit_area=\"inside\")\n",
+    "    dfn = dfn.sort_index()\n",
+    "    return dfn\n",
+    "\n",
+    "\n",
+    "def list_val_default(list_, default=0):\n",
+    "    return list_[1] if len(list_) > 1 else default\n"
    ]
   },
   {
@@ -185,7 +326,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(panel_dict)"
+    "df = scrape(site)\n",
+    "if df is None:\n",
+    "    print(\"NO UPDATES\")\n",
+    "else:\n",
+    "    clean_plot_df(df)"
    ]
   },
   {
@@ -194,34 +339,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(df_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = reduce(lambda df_1, df_2: pd.merge(df_1, df_2, how=\"outer\", left_index=True, right_index=True), df_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"test_output.csv\")"
+    "# mailer = mailersend.NewApiClient()\n",
+    "\n",
+    "# subject = \"Subject\"\n",
+    "# text = \"This is the text content\"\n",
+    "# html = \"<p>This is the HTML content</p>\"\n",
+    "\n",
+    "# my_mail = \"owner@verified_domain.com\"\n",
+    "# subscriber_list = [ 'pamela@dundermifflin.com',\n",
+    "# 'dwight@dunderfmifflin.com', 'jim@dundermifflin.com']\n",
+    "\n",
+    "# mailer.send(my_mail, subscriber_list, subject, html, text)"
    ]
   },
   {
@@ -230,6 +358,24 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.select_dtypes(\"O\").dropna(how=\"all\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = pd.read_csv(\"test_output.csv\", index_col=0)"
+   ]
   }
  ],
  "metadata": {
